WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282678
Translator fuzzer corpus does not work after ShShaderOutput enum changes
https://bugs.webkit.org/show_bug.cgi?id=282678
Summary
Translator fuzzer corpus does not work after ShShaderOutput enum changes
Kimmo Kinnunen
Reported
2024-11-06 00:15:40 PST
Translator fuzzer corpus does not work after ShShaderOutput enum changes
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-06 00:16:05 PST
<
rdar://problem/139339795
>
Kimmo Kinnunen
Comment 2
2024-11-06 00:17:56 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36251
EWS
Comment 3
2024-11-07 01:55:21 PST
Committed
286273@main
(9936a2ec1d4e): <
https://commits.webkit.org/286273@main
> Reviewed commits have been landed. Closing PR #36251 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug