ANGLE: Make translator fuzzer work with old corpus after ShShaderOutput enum changes https://bugs.webkit.org/show_bug.cgi?id=282678 rdar://problem/139339795

Reviewed by Tadeu Zagallo.

ShShaderOutput is part of the corpus sample. In WebKit
15a6eb418d125a5f8b7ed2047c41329a3e3456a3 285655@main
the enum values were updated. Map the old values to the new values, so
that old corpus works.

* Source/ThirdParty/ANGLE/WebKit/TranslatorFuzzer.cpp:
(resolveShaderOutput):
(LLVMFuzzerTestOneInput):
* Source/ThirdParty/ANGLE/WebKit/TranslatorFuzzerDumpTestCase.cpp:
* Source/ThirdParty/ANGLE/WebKit/TranslatorFuzzerSupport.h:

Canonical link: https://commits.webkit.org/286273@main